syntax = "proto3";

package user;

option go_package = "github.com/Geawn/Ms_E-commerce_BE/account-service/proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}

message CreateUserResponse {
  uint64 user_id = 1;
  bool success = 2;
  string error = 3;
} 